tidy up different policy calculators